--- a/WPF_001/WPF_001/MainWindow.xaml
+++ b/WPF_001/WPF_001/MainWindow.xaml
@@ -19,11 +19,12 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
             <!-- -->
-            <Button Grid.Column="0" Content="Apply" Margin="0,0,10,0"/>
+            <Button Grid.Column="0" Content="Apply" Margin="0,0,10,0" Click="Button_Click"/>
             <Button Grid.Column="1" Content="Reset" Margin="0,0,0,0"/>
             <Button Grid.Column="2" Content="Refresh" Margin="10,0,0,0"/>
             </Grid>
             <!--  Pulse propreties-->
+            <!-- text block that user cant type or rename-->
             <TextBlock Text="Pluse Propreties" FontWeight="Bold" Margin="0,10" />
             <!-- Discription-->
             <TextBlock Text="Discription" FontWeight="Bold"  />
