--- a/WPF_002/WPF_002/MainWindow.xaml
+++ b/WPF_002/WPF_002/MainWindow.xaml
@@ -5,8 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_002"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Loaded="Window_Loaded"
+        Title="WPF" Height="350" Width="525" WindowStartupLocation="CenterScreen">
     <Grid>
         
+        
+        <TreeView x:Name="FolderView">
+            <TreeView.Resources>
+                <Style TargetType="{x:Type TreeViewItem}">
+                    <Setter Property="HeaderTemplate">
+                        <Setter.Value>
+                            <DataTemplate>
+                                 <StackPanel Orientation="Horizontal">
+                                        <Image  Source="Image/drive.png" Width="20" Margin="0,0,3,0"/>
+                                            <TextBlock VerticalAlignment="Center"  Text = "{Binding}" />
+                                 </StackPanel> 
+                            </DataTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+                
+            </TreeView.Resources>
+        </TreeView>
     </Grid>
 </Window>
