--- a/WPF_002/WPF_002/App.xaml
+++ b/WPF_002/WPF_002/App.xaml
@@ -1,9 +1,9 @@
-﻿<Application x:Class="WPF_002.App"
+﻿<Application x:Class="WpfTreeView.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPF_002"
+             xmlns:local="clr-namespace:WpfTreeView"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
