--- a/WPF_002/WPF_002/MainWindow.xaml
+++ b/WPF_002/WPF_002/MainWindow.xaml
@@ -1,30 +1,33 @@
-﻿<Window x:Class="WPF_002.MainWindow"
+﻿<Window x:Class="WpfTreeView.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPF_002"
-        mc:Ignorable="d"
+        xmlns:local="clr-namespace:WpfTreeView"
         Loaded="Window_Loaded"
-        Title="WPF" Height="350" Width="525" WindowStartupLocation="CenterScreen">
+        mc:Ignorable="d"
+        Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
-        
+
         <TreeView x:Name="FolderView">
             <TreeView.Resources>
+
                 <Style TargetType="{x:Type TreeViewItem}">
                     <Setter Property="HeaderTemplate">
                         <Setter.Value>
                             <DataTemplate>
-                                 <StackPanel Orientation="Horizontal">
-                                        <Image  Source="Image/drive.png" Width="20" Margin="0,0,3,0"/>
-                                            <TextBlock VerticalAlignment="Center"  Text = "{Binding}" />
-                                 </StackPanel> 
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Width="20" Margin="3" 
+                                        Source="{Binding
+                                            RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type TreeViewItem}},
+                                            Path=Tag,
+                                            Converter={x:Static local:HeaderToImageConverter.Instance}}" />
+                                    <TextBlock VerticalAlignment="Center" Text="{Binding}" />
+                                </StackPanel>
                             </DataTemplate>
                         </Setter.Value>
                     </Setter>
                 </Style>
-                
             </TreeView.Resources>
         </TreeView>
     </Grid>
