--- a/T_024_WPF_Scrollviewer/T_024_WPF_Scrollviewer/MainWindow.xaml
+++ b/T_024_WPF_Scrollviewer/T_024_WPF_Scrollviewer/MainWindow.xaml
@@ -6,7 +6,57 @@
         xmlns:local="clr-namespace:T_024_WPF_Scrollviewer"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
+    <!-- WPF - Scrollviewer
+    A ScrollViewer is a control that provides a 
+    scrollable area that can contain other visible
+    elements. The hierarchical inheritance of ScrollViewer 
+    class is as follows −
+
+Commonly Used Properties of ScrollViewer Class
+Given below are the most commonly used properties of Scrollviewer.
+Commonly Used Events of ScrollViewer Class
+Given below are the most commonly used events of Scrollviewer.
+Commonly Used Methods of ScrollViewer Class
+Given below are the most commonly used methods of Scrollviewer.
+Example
+Let’s create a new WPF project with the name WPFScrollViewerControl.
+
+The following example shows how to add a ScrollViewer in your XAML application.
+
+We will add two Text Boxes and one with a ScrollViewer and initialize them with some properties and events.
+    
+    -->
     <Grid>
-        
+        <StackPanel>
+            <!-- A large TextBlock. -->
+            <TextBlock Width = "300" TextWrapping = "Wrap" Margin = "0,0,0,30"  
+            Text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac mi ipsum. 
+            Phasellus vel malesuada mauris. Donec pharetra, enim sit amet mattis tincidunt, felis 
+            nisi semper lectus, vel porta diam nisi in augue. Pellentesque lacus tortor, aliquam et 
+            faucibus id, rhoncus ut justo. Sed id lectus odio, eget pulvinar diam. Suspendisse 
+            eleifend ornare libero, in luctus purus aliquet non. Sed interdum, sem vitae rutrum 
+            rhoncus, felis ligula ultrices sem, in eleifend eros ante id neque." />
+
+            <!-- The same large TextBlock, wrapped in a ScrollViewer. -->
+
+            <ScrollViewer Height = "200" Width = "200"  
+            HorizontalScrollBarVisibility = "Auto" VerticalScrollBarVisibility = "Auto">
+
+                <TextBlock Width = "300" TextWrapping = "Wrap" 
+               Text = " This license governs use of code marked as sample or example available 
+               on this web site without a license agreement, as provided under the section above 
+               titled NOTICE SPECIFIC TO SOFTWARE AVAILABLE ON THIS WEB SITE. If you use such 
+               code (the software), you accept this license. If you do not accept the license, 
+               do not use the software.Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+               Sed ac mi ipsum. Phasellus vel malesuada mauris. Donec pharetra, enim sit amet 
+               mattis tincidunt, felis nisi semper lectus, vel porta diam nisi in augue. 
+               Pellentesque lacus tortor, aliquam et faucibus id, rhoncus ut justo. Sed id 
+               lectus odio, eget pulvinar diam. Suspendisse eleifend ornare libero, in luctus 
+               purus aliquet non. Sed interdum, sem vitae rutrum rhoncus, felis ligula ultrices 
+               sem, in eleifend eros ante id neque." />
+
+            </ScrollViewer>
+
+        </StackPanel>
     </Grid>
 </Window>
